// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SensorList renders react component with props 1`] = `
<table
  className="table is-bordered is-striped is-fullwidth is-hoverable"
>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Unit
      </th>
      <th>
        Minimum Safe Value
      </th>
      <th>
        Maximum Safe Value
      </th>
    </tr>
  </thead>
  <tbody>
    <SensorListItem
      key="aaaa-aaaa"
      sensor={
        Object {
          "id": "aaaa-aaaa",
          "maxSafe": 30,
          "minSafe": -30,
          "name": "temperature",
          "siteId": "1111-1111",
          "unit": "celsius",
        }
      }
    />
    <SensorListItem
      key="bbbb-bbbb"
      sensor={
        Object {
          "id": "bbbb-bbbb",
          "maxSafe": 86,
          "minSafe": -22,
          "name": "temperature",
          "siteId": "2222-2222",
          "unit": "fahrenheit",
        }
      }
    />
  </tbody>
</table>
`;

exports[`SensorList renders react component with props 2`] = `
<table
  className="table is-bordered is-striped is-fullwidth is-hoverable"
>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Unit
      </th>
      <th>
        Minimum Safe Value
      </th>
      <th>
        Maximum Safe Value
      </th>
    </tr>
  </thead>
  <tbody>
    <SensorListItem
      key="cccc-cccc"
      sensor={
        Object {
          "id": "cccc-cccc",
          "maxSafe": 100000,
          "minSafe": 50000,
          "name": "pressure",
          "siteId": "3333-3333",
          "unit": "pascal",
        }
      }
    />
    <SensorListItem
      key="dddd-dddd"
      sensor={
        Object {
          "id": "dddd-dddd",
          "maxSafe": 1,
          "minSafe": 0.5,
          "name": "pressure",
          "siteId": "4444-4444",
          "unit": "atmosphere",
        }
      }
    />
  </tbody>
</table>
`;
